<resources>
    <string name="app_name">Loodos</string>
    <string name="movie_details">Movie Details</string>
    <string name="network_error_text">There is no internet connection. %s Please check your connection and try again.</string>
    <string name="try_again">Try Again</string>
    <string name="fetch_failed">Fetch failed</string>
    <string name="search_hint">Search</string>
    <string name="login_logout">Do you want to logout this application?</string>
    <string name="ok">Ok</string>
    <string name="question">Question</string>
    <string name="cancel">Cancel</string>
    <string name="not_find">Movie Not Found</string>
    <string name="error">Error!</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="rated">Rated</string>
    <string name="released">Released</string>
    <string name="plot">Plot</string>
    <string name="director">Director</string>
    <string name="language">Language</string>
    <string name="runtime">Runtime</string>
    <string name="genre">Genre</string>
    <string name="error_value">Please fill this field.</string>
    <string name="query_data">Please enter your query </string>
    <string name="query_key">Please enter your "'n'" query </string>
    <string name="results">Result</string>

</resources>
